--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
   >
     <div class="h:1024">
       <h2 class="f:40 f:sans f:heavy word-spacing:4 text:center py:150">
-        Master Styles Scroll Bar
+        Master Styles Scroll Bar 👉
       </h2>
+
+      <div class="text:center">
+        <p class="f:fade-55 f:sans f:heavy py:15">Range Input</p>
+        <input type="range" min="0" max="100" value="15" class="mt:10 w:1/4" />
+        <input type="range" min="0" max="100" value="15" class="mt:35 w:3/4" />
+      </div>
     </div>
   </body>
 </html>
